@@ -1,3 +1,7 @@
+2007-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-message): Work with XEmacs.
+
 2007-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-ems.el: Bind w3m-use-title-buffer-name (see the comment).
